# myPybindProject

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
include/my_math/: bindings_main.h  bindings_math.h  bindings_point.h
src/my_math/: bindings_main.cpp  bindings_math.cpp  bindings_point.cpp
tests/: my_math_test.py
